<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RePlace</string>
    <string name="hello_world">Hello world!</string>
    <string name="userName">Username</string>
    <string name="userAlias">Alias</string>
    <string name="userPassword">Password</string>
    <string name="userFoods">Favourite Foods</string>
    <string name="userDrinks">Favourite Drinks</string>
    <string name="userBooks">Favourite Books</string>
    <string name="userMovies">Favourite Movies</string>
    <string name="userMusics">Favourite Musics</string>
    <string name="userGender">Gender</string>
    <string name="userOccupation">Occupation</string>
    <string name="userDOB">Date of Birth</string>
    <string name="buttonLogin">Login</string>
    <string name="quickButtonLogin">Quick Login</string>
    <string name="buttonRegister">Register</string>
    <string name="buttonSubmit">Submit</string>
    <string name="title_activity_place_type">PlaceType</string>
    <string name="title_activity_place_selector">PlaceSelector</string>
    <string name="title_activity_place_detail">PlaceDetail</string>
    <string name="title_activity_activity_window">ActivityWindow</string>

    <string-array name="spinnerRangeEntries">
        <item>100 meter</item>
        <item>500 meter</item>
        <item>1000 meter</item>
        <item>2000 meter</item>
    </string-array>
    <string-array name="spinnerServerEntries">
        <item>http://10.151.36.36:8080/</item>
        <item>http://riset.ajk.if.its.ac.id/replace/</item>
    </string-array>
    <string-array name="spinnerGeolocationEntries">
        <item>static</item>
        <item>auto</item>
    </string-array>

    <string name="spinnerPlaceType">Place Type</string>
    <string name="spinnerRange">Range</string>
    <string name="spinnerServer">Server URL</string>
    <string name="spinnerGeolocation">Geolocation</string>
    <string name="action_settings">Settings</string>
    <string name="action_reviews">Reviews</string>
    <string name="action_rating">Give Rating</string>
    <string name="action_map">View Map</string>
    <string name="action_profile">Profile</string>
    <string name="title_activity_place_reviews">PlaceReviews</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_place_selector_map">PlaceSelectorMap</string>
    <string name="title_activity_user_form">UserForm</string>
    <string name="title_activity_user_form_detail">UserFormDetail</string>
    <string name="linkToRegister">New user? Register here</string>
</resources>