<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:weightSum="1">

    <EditText
        android:id="@+id/userName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userName"
        android:ems="10" >
    </EditText>

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/userPassword"
        android:layout_below="@+id/userName" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonLogin"
        android:layout_below="@+id/userPassword" />

    <Button
        android:id="@+id/quickButtonLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/quickButtonLogin"
        android:layout_below="@+id/buttonLogin" />
    
    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonRegister"
        android:layout_below="@+id/quickButtonLogin" />
    
    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/buttonLogin" />

</RelativeLayout>